# twardown-org

./: .gitignore  .gitmodules  01-firststeps.sh  02-check.sh  03-up.sh  CHANGELOG.md  LOG.md  README.md  TODO.md  create-github-repos.sh  pyproject.toml  tree.txt
.cursor/rules/: twardown.mdc
.specstory/history/: debugging-toml-configuration-issues.md  executing-tasks-from-todo-file.md  implementing-features-and-updating-documentation.md  implementing-todos-and-updating-project-documentation.md  project-maintenance-and-update-tasks.md  project-script-execution-and-documentation-update.md  script-execution-and-documentation-update-1.md  script-execution-and-documentation-update-2.md  script-execution-and-documentation-update.md  script-execution-and-error-handling.md  script-execution-and-implementation-steps.md  script-execution-and-robustness-improvement-1.md  script-execution-and-robustness-improvement.md  shell-script-execution-and-troubleshooting-1.md  shell-script-execution-and-troubleshooting.md  task-organization-from-folder-contents.md  untitled.md
src/twardown/: core.py  types.py
tests/: test_core.py
